--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
 
 /*
-! tailwindcss v3.2.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -32,6 +32,7 @@
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
 */
 
 html {
@@ -46,6 +47,8 @@ html {
   /* 3 */
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
+  font-feature-settings: normal;
+  /* 5 */
 }
 
 /*
@@ -520,32 +523,12 @@ video {
   position: relative;
 }
 
-.top-10{
-  top: 2.5rem;
-}
-
-.right-0{
-  right: 0px;
-}
-
-.right-5{
-  right: 1.25rem;
-}
-
-.right-8{
-  right: 2rem;
-}
-
-.top-12{
-  top: 3rem;
+.top-14{
+  top: 3.5rem;
 }
 
 .right-6{
   right: 1.5rem;
-}
-
-.top-14{
-  top: 3.5rem;
 }
 
 .z-50{
@@ -568,24 +551,16 @@ video {
   height: 100vh;
 }
 
+.w-5{
+  width: 1.25rem;
+}
+
 .w-screen{
   width: 100vw;
 }
 
 .w-full{
   width: 100%;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
-.w-10{
-  width: 2.5rem;
 }
 
 .flex-1{
@@ -686,20 +661,12 @@ video {
   padding: 1.25rem;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
 .p-10{
   padding: 2.5rem;
 }
 
 .p-1{
   padding: 0.25rem;
-}
-
-.p-4{
-  padding: 1rem;
 }
 
 .py-2{
@@ -756,7 +723,17 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-black:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-100:hover{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
